# Inbounnd_Caller_Hospital_receptionnist

./: .gitignore  README.md  agent.py  dispatch-rule.json  inbound-trunk.json  main.py  pyproject.toml  seed_database.py
database/: models.py  mongodb.py
prompts/: __init__.py  assistant_prompts.py
tools/: __init__.py  appointment.py  datetime_tool.py  department_info.py  doctor_schedule.py  emergency.py  weather.py
